fix alignment issue resources.html

--- a/css/indexstyles.css
+++ b/css/indexstyles.css
@@ -22,6 +22,7 @@ body {
   padding-top: 2px;
   margin-bottom: 2px;
   opacity: 0.8;
+  z-index: 50;
 }
 
 #indexNav a {
