--- a/css/resources.css
+++ b/css/resources.css
@@ -17,6 +17,7 @@ background {
   padding-top: 2px;
   margin-bottom: 2px;
   opacity: 0.8;
+  z-index: 50;
 }
 
 #indexNav a {
@@ -38,6 +39,8 @@ background {
   color: #000000;
   font-weight: bold;
 }
+
+
 
 /* nav bar css end ---------> */
 
@@ -61,18 +64,26 @@ h4 {
   letter-spacing: 3px;
   padding-left: 60px;
   padding-top: 35px;
-
+  color: #FFFFFF;
 }
 
 #leftBubble {
   float: left;
 }
 
-#rightTitle {
+.rightTitle {
   font-size: 45px;
   text-transform: uppercase;
   letter-spacing: 3px;
   text-align: right;
+}
+
+#govTitle {
+  font-size: 45px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  text-align: right;
+  padding-right: 100px;
 }
 
 
@@ -92,6 +103,8 @@ h4 {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
 
 .minors p {
@@ -104,37 +117,31 @@ h4 {
   font-size: 20px;
   width: 380px;
   height: 380px;
-
-  /* border-radius: 50%; */
 }
 
 .fruits {
   display: flex;
   align-items: center;
-  /* border: 2px solid black; */
   margin-top: 50px;
-  /* margin-bottom: 10px; */
-  padding: 10px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
+
 }
 
 .fruits p {
   text-align: center;
   margin: 30px;
-  /* margin-bottom: 20px; */
   border: 5px solid #a8adac;
-  padding: 70px;
   border-radius: 100%;
   margin-top: -20px;
   font-size: 20px;
   width: 390px;
   height: 390px;
   background-color: #a8adac;
+  padding: 70px;
   padding-top: 50px;
 
-  /* border-radius: 50%; */
 }
 
 .foodBank {
@@ -143,7 +150,8 @@ h4 {
   margin-top: 50px;
   border: 2px solid white;
   /* margin-bottom: 10px; */
-  padding: 10px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   background-image: url("http://www.rosywoodmahemuestate.com/wp-content/uploads/pexels-photo-176169-2000x1152.jpeg");
   background-attachment: fixed;
   background-position: center;
@@ -170,7 +178,9 @@ h4 {
   /* border: 2px solid black; */
   margin-top: 100px;
   /* margin-bottom: 10px; */
-  padding: 10px;
+  /* padding: 10px; */
+  padding-top: -50px;
+  padding-bottom: -50px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -199,7 +209,9 @@ h4 {
   margin-top: 50px;
   margin-bottom: 50px;
   /* margin: 10px; */
-  padding: 10px;
+  /* padding: 10px; */
+  padding-top: 40px;
+  padding-bottom: 40px;
   background-image: url("https://images.unsplash.com/photo-1551042863-dbb4938b111f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2551&q=80");
   background-attachment: fixed;
   background-position: center;
@@ -286,7 +298,7 @@ h4 {
   text-decoration: none;
   font-weight: bold;
   text-transform: uppercase;
-  letter-spacing: 2px; 
+  letter-spacing: 2px;
 }
 
 
